@@ -8,12 +8,14 @@ import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.UUID;
 import lombok.AccessLevel;
 import lombok.Getter;
 
 @Getter
 public class Entrega implements AggregateRoot {
+
   private final UUID id;
   private UUID idRuta;
   private final UUID idDonacion;
@@ -27,8 +29,33 @@ public class Entrega implements AggregateRoot {
   private LocalDateTime horaArribo;
   private LocalDateTime horaSalida;
   private String fotoRecepcionUrl;
+  private Boolean confirmacionEntrega;
   private final float pesoTotalKG;
   private final float volumenTotalM3;
+
+  public Entrega(
+      UUID idDonacion,
+      UUID idBeneficiaria,
+      Direccion destino,
+      float pesoTotalKG,
+      float volumenTotalM3) {
+    validarIdentificador(idDonacion);
+    validarIdentificador(idBeneficiaria);
+    validarDestino(destino);
+    validarMagnitudPositiva(pesoTotalKG);
+    validarMagnitudPositiva(volumenTotalM3);
+
+    this.id = UUID.randomUUID();
+    this.idRuta = null;
+    this.idDonacion = idDonacion;
+    this.idBeneficiaria = idBeneficiaria;
+    this.destino = destino;
+    this.estadoActual = EstadoEntrega.PENDIENTE;
+    this.historialEstado = new ArrayList<>();
+    this.confirmacionEntrega = false;
+    this.pesoTotalKG = pesoTotalKG;
+    this.volumenTotalM3 = volumenTotalM3;
+  }
 
   public Entrega(
       UUID idRuta,
@@ -37,121 +64,97 @@ public class Entrega implements AggregateRoot {
       Direccion destino,
       float pesoTotalKG,
       float volumenTotalM3) {
-    if (idDonacion == null || idBeneficiaria == null || destino == null) {
-      throw new ValidationException(ErrorCatalog.ARGUMENTO_NULO);
-    }
-    if (pesoTotalKG <= 0 || volumenTotalM3 <= 0) {
-      throw new ValidationException(ErrorCatalog.ARGUMENTO_INVALIDO);
-    }
-
-    this.id = UUID.randomUUID();
-    this.idRuta = idRuta;
-    this.idDonacion = idDonacion;
-    this.idBeneficiaria = idBeneficiaria;
-    this.destino = destino;
-    this.estadoActual = EstadoEntrega.PENDIENTE;
-    this.historialEstado = new ArrayList<>();
-    this.pesoTotalKG = pesoTotalKG;
-    this.volumenTotalM3 = volumenTotalM3;
+    this(idDonacion, idBeneficiaria, destino, pesoTotalKG, volumenTotalM3);
+    asignarRuta(idRuta);
   }
 
-  public List<CambioEstadoEntrega> getHistorialEstado() {
-    return List.copyOf(this.historialEstado);
-  }
-
-  /**
-   * Asocia esta entrega a la ruta que la incluirá en el reparto. Una entrega se crea al momento de
-   * asignarse la donación a una entidad beneficiaria (aún sin ruta) y recién se vincula a una ruta
-   * concreta cuando el {@code GeneradorDeRutas} la agrupa junto a otras entregas para un camión
-   * determinado.
-   */
   public void asignarRuta(UUID idRuta) {
-    if (idRuta == null) {
-      throw new ValidationException(ErrorCatalog.ARGUMENTO_NULO);
-    }
+    validarIdentificador(idRuta);
+
     if (this.idRuta != null) {
       throw new ValidationException(ErrorCatalog.ENTREGA_YA_ASIGNADA_A_RUTA);
     }
+
+    if (this.estadoActual != EstadoEntrega.PENDIENTE) {
+      throw new ValidationException(ErrorCatalog.ESTADO_ENTREGA_TRANSICION_INVALIDA);
+    }
+
     this.idRuta = idRuta;
   }
 
   public void iniciarRuta(String chofer) {
-    if (chofer == null) {
-      throw new ValidationException(ErrorCatalog.ARGUMENTO_NULO);
-    }
-    if (chofer.trim().isEmpty()) {
-      throw new ValidationException(ErrorCatalog.ARGUMENTO_INVALIDO);
-    }
+    validarActor(chofer);
+
     if (this.estadoActual != EstadoEntrega.PENDIENTE) {
       throw new ValidationException(ErrorCatalog.ESTADO_ENTREGA_TRANSICION_INVALIDA);
     }
+
     actualizarEstado(EstadoEntrega.EN_TRASLADO, chofer);
     this.horaSalida = LocalDateTime.now(ZoneId.of("UTC"));
   }
 
   public void confirmarEntrega(String entidad) {
-    if (entidad == null) {
-      throw new ValidationException(ErrorCatalog.ARGUMENTO_NULO);
-    }
-    if (entidad.trim().isEmpty()) {
-      throw new ValidationException(ErrorCatalog.ARGUMENTO_INVALIDO);
-    }
+    validarActor(entidad);
+
     if (this.estadoActual != EstadoEntrega.EN_TRASLADO) {
       throw new ValidationException(ErrorCatalog.ESTADO_ENTREGA_TRANSICION_INVALIDA);
     }
+
     actualizarEstado(EstadoEntrega.ENTREGADA, entidad);
     this.horaArribo = LocalDateTime.now(ZoneId.of("UTC"));
+    this.confirmacionEntrega = true;
   }
 
   public void adjuntarFotoRecepcion(String fotoURL) {
-    if (fotoURL == null) {
-      throw new ValidationException(ErrorCatalog.ARGUMENTO_NULO);
-    }
-    if (fotoURL.trim().isEmpty()) {
+    if (Objects.isNull(fotoURL) || fotoURL.isBlank()) {
       throw new ValidationException(ErrorCatalog.ARGUMENTO_INVALIDO);
     }
+
     if (this.estadoActual != EstadoEntrega.ENTREGADA) {
       throw new ValidationException(ErrorCatalog.ESTADO_ENTREGA_TRANSICION_INVALIDA);
     }
-    this.fotoRecepcionUrl = fotoURL;
+
+    this.fotoRecepcionUrl = fotoURL.trim();
   }
 
   public void negarEntrega(String entidad) {
-    if (entidad == null) {
-      throw new ValidationException(ErrorCatalog.ARGUMENTO_NULO);
-    }
-    if (entidad.trim().isEmpty()) {
-      throw new ValidationException(ErrorCatalog.ARGUMENTO_INVALIDO);
-    }
+    validarActor(entidad);
+
     if (this.estadoActual != EstadoEntrega.EN_TRASLADO) {
       throw new ValidationException(ErrorCatalog.ESTADO_ENTREGA_TRANSICION_INVALIDA);
     }
-    actualizarEstado(EstadoEntrega.NO_RECIBIDA, entidad);
 
+    actualizarEstado(EstadoEntrega.NO_RECIBIDA, entidad);
     mandarARevision("SISTEMA_LOGISTICA");
   }
 
   private void mandarARevision(String actor) {
+    validarActor(actor);
+
     if (this.estadoActual != EstadoEntrega.NO_RECIBIDA) {
       throw new ValidationException(ErrorCatalog.ESTADO_ENTREGA_TRANSICION_INVALIDA);
     }
+
     actualizarEstado(EstadoEntrega.REVISION, actor);
   }
 
   public void regresarAlDeposito(String administrador) {
-    if (administrador == null) {
-      throw new ValidationException(ErrorCatalog.ARGUMENTO_NULO);
-    }
-    if (administrador.trim().isEmpty()) {
-      throw new ValidationException(ErrorCatalog.ARGUMENTO_INVALIDO);
-    }
+    validarActor(administrador);
+
     if (this.estadoActual != EstadoEntrega.REVISION
         && this.estadoActual != EstadoEntrega.NO_RECIBIDA) {
       throw new ValidationException(ErrorCatalog.ESTADO_ENTREGA_TRANSICION_INVALIDA);
     }
+
     actualizarEstado(EstadoEntrega.PENDIENTE, administrador);
     this.horaArribo = null;
     this.horaSalida = null;
+    this.idRuta = null;
+    this.confirmacionEntrega = false;
+  }
+
+  public List<CambioEstadoEntrega> getHistorialEstado() {
+    return List.copyOf(this.historialEstado);
   }
 
   private void actualizarEstado(EstadoEntrega nuevoEstado, String actor) {
@@ -169,5 +172,29 @@ public class Entrega implements AggregateRoot {
   @Override
   public UUID getId() {
     return this.id;
+  }
+
+  private void validarIdentificador(UUID id) {
+    if (Objects.isNull(id)) {
+      throw new ValidationException(ErrorCatalog.ARGUMENTO_NULO);
+    }
+  }
+
+  private void validarDestino(Direccion destino) {
+    if (Objects.isNull(destino)) {
+      throw new ValidationException(ErrorCatalog.ARGUMENTO_NULO);
+    }
+  }
+
+  private void validarMagnitudPositiva(float valor) {
+    if (valor <= 0) {
+      throw new ValidationException(ErrorCatalog.ARGUMENTO_INVALIDO);
+    }
+  }
+
+  private void validarActor(String actor) {
+    if (Objects.isNull(actor) || actor.isBlank()) {
+      throw new ValidationException(ErrorCatalog.ARGUMENTO_INVALIDO);
+    }
   }
 }
